Migration Java 21: target=8, remove --add-reads, fix UniversalResourceModule classpath