@@ -285,14 +285,10 @@
 				<artifactId>aspectj-maven-plugin</artifactId>
 				<version>1.14.1</version>
 				<configuration>
-					<complianceLevel>21</complianceLevel>
+					<complianceLevel>1.8</complianceLevel>
                                         <Xlint>ignore</Xlint>
-                                        <compilerArgs>
-                                                <arg>--add-reads</arg>
-                                                <arg>java.xml=ALL-UNNAMED</arg>
-                                        </compilerArgs>
-					<source>21</source>
-					<target>21</target>
+					<source>8</source>
+					<target>8</target>
 					<aspectLibraries>
 						<aspectLibrary>
 							<groupId>org.springframework</groupId>
@@ -326,12 +322,8 @@
                                 <artifactId>maven-compiler-plugin</artifactId>
                                 <version>3.11.0</version>
                                 <configuration>
-                                        <source>21</source>
-                                        <target>21</target>
-                                        <compilerArgs>
-                                                <arg>--add-reads</arg>
-                                                <arg>java.xml=ALL-UNNAMED</arg>
-                                        </compilerArgs>
+                                        <source>8</source>
+                                        <target>8</target>
                                 </configuration>
                         </plugin>
 		</plugins>
